# BaKGL

./: CMakeLists.txt  config.agent.json  config.json
app/: CMakeLists.txt  agentHarness.cpp  agentHarness.hpp  config.cpp  config.hpp  main3d.cpp  show_scene.cpp
app/test/: CMakeLists.txt  configTest.cpp
bak/: CMakeLists.txt  IZoneLoader.hpp  camera.cpp  camera.hpp  overheadMapClassifier.cpp  overheadMapClassifier.hpp  startupFiles.cpp  startupFiles.hpp  textureFactory.cpp  textureFactory.hpp  worldFactory.cpp  zone.cpp
bak/test/: CMakeLists.txt  combatSubstituteTest.cpp  mainViewCutoutTest.cpp  (+5 more)
com/: CMakeLists.txt  path.cpp  path.hpp  resize.cpp
game/: combatModelLoader.cpp  encounterHandler.cpp  gameRunner.cpp  gameRunner.hpp  systems.cpp  systems.hpp
graphics/: CMakeLists.txt  glfw.cpp  glfw.hpp  graphicsConfig.cpp  graphicsConfig.hpp  guiRenderer.cpp  guiRenderer.hpp  inputHandler.cpp  inputHandler.hpp  opengl.cpp  opengl.hpp  quad.cpp  renderData.cpp  renderData.hpp  renderer.hpp  sprites.cpp  sprites.hpp  textureUpload.cpp  textureUpload.hpp  vramTracker.cpp  vramTracker.hpp
gui/: CMakeLists.txt  IGuiManager.hpp  actors.cpp  backgrounds.cpp  backgrounds.hpp  bookPlayer.cpp  colors.hpp  contents.cpp  dialogDisplay.cpp  dialogRunner.hpp  dynamicTTM.cpp  fullMap.cpp  fullMap.hpp  gdsScene.cpp  guiManager.cpp  guiManager.hpp  mainMenuScreen.cpp  mainMenuScreen.hpp  mainView.cpp  mainView.hpp  overheadMap.cpp  overheadMap.hpp  preferencesScreen.cpp  preferencesScreen.hpp  saveScreen.cpp  saveScreen.hpp  screenCutout.hpp  staticTTM.cpp  teleportScreen.cpp
(+11 files in other folders)
